# upsm

./: CMakeLists.txt  ChangeLog  README  README.md  main.cpp  mainwindow.cpp  mainwindow.h  meson.build  upsm.pro  upsm.qrc
desktop/: upsm.desktop
manuals/: en  ru
translations/: upsm_ru.qm  upsm_ru.ts
